force-app/src/objects/TR1__Off_Limit_Info__c.object
<CustomObject>
    <description>A junction object for off-limit rules between Accounts and Contacts. This object also stores details for off-limit rules.</description>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account lookup required only for Contact Off Limit Info record</description>
        <inlineHelpText>Account lookup required only for Contact Off Limit Info record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Off Limits Info</relationshipLabel>
        <relationshipName>Off_Limits_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A boolean field that specifies if the associated record is off limit or not</description>
        <inlineHelpText>A boolean field that specifies if the associated record is off limit or not</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Behavior__c</fullName>
        <description>Describes the final behavior for the Off Limit once all policies are taken into consideration</description>
        <inlineHelpText>Describes the final behavior for the Off Limit once all policies are taken into consideration</inlineHelpText>
        <label>Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Calculate_On_Create__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A boolean field that specifies if the info record should be calculated upon creation</description>
        <inlineHelpText>A boolean field that specifies if the info record should be calculated upon creation</inlineHelpText>
        <label>Calculate On Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Calculation_Error_Message__c</fullName>
        <description>Store some error message related to the Off Limit Info record calculation.</description>
        <inlineHelpText>Store some error message related to the Off Limit Info record calculation.</inlineHelpText>
        <label>Calculation Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact lookup required only for Contact Off Limit Info record</description>
        <inlineHelpText>Contact lookup required only for Contact Off Limit Info record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Off Limits Info</relationshipLabel>
        <relationshipName>Off_Limits_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Disabled_Policy_Ids__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Exempted_Job_Ids__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Got_Dirty_Datetime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The moment the info record got dirty and needs recalculation</description>
        <inlineHelpText>The moment the info record got dirty and needs recalculation</inlineHelpText>
        <label>Got Dirty Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Locking_Off_Limit_Ids__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Object__c</fullName>
        <description>Identify which type of object the info records is related to</description>
        <inlineHelpText>Identify which type of object the info records is related to</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Off_Limit_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Active Off Limit Policy. In case of multiple policies, &apos;winning&apos; Off Limit Policy based on order of execution.</description>
        <inlineHelpText>Active Off Limit Policy. In case of multiple policies, &apos;winning&apos; Off Limit Policy based on order of execution.</inlineHelpText>
        <label>Off Limit Policy</label>
        <referenceTo>TR1__Off_Limit_Policy__c</referenceTo>
        <relationshipLabel>Off Limit Infos</relationshipLabel>
        <relationshipName>Off_Limit_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Off_Limit_Reason__c</fullName>
        <description>The information about the first locking Off Limit policy in text format.</description>
        <inlineHelpText>The information about the first locking Off Limit policy in text format.</inlineHelpText>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Id of the record this off limit info belongs to</description>
        <externalId>true</externalId>
        <inlineHelpText>The Id of the record this off limit info belongs to</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__State_Processing_Last_Performed__c</fullName>
        <description>This should be set to &quot;now&quot; when State processing is performed</description>
        <inlineHelpText>This should be set to &quot;now&quot; when State processing is performed</inlineHelpText>
        <label>State Processing Last Performed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__State_Processing_Last_Required__c</fullName>
        <description>This should be set to &quot;now&quot; when State processing is required</description>
        <inlineHelpText>This should be set to &quot;now&quot; when State processing is required</inlineHelpText>
        <label>State Processing Last Required</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__State_Processing_Required__c</fullName>
        <description>Formula field that calculates if the info record needs processing or not</description>
        <formula>NOT(ISBLANK(TR1__State_Processing_Last_Required__c)) &amp;&amp; (ISBLANK(TR1__State_Processing_Last_Performed__c) || TR1__State_Processing_Last_Performed__c &lt;= TR1__State_Processing_Last_Required__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that calculates if the info record needs processing or not</inlineHelpText>
        <label>State Processing Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Off Limit Info</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Off Limit Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>